--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/styles": "^4.11.5",
     "chart.js": "^4.2.1",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-avatar-editor": "^13.0.0",
     "react-chartjs-2": "^5.2.0",
-    "react-day-picker": "^8.6.0",
+    "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.7.4",
     "react-hook-form": "^7.43.5",
@@ -37,6 +38,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-pwa": "^0.16.4"
   }
 }
