--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-easy-crop": "^4.7.4",
     "react-hook-form": "^7.43.5",
     "react-router-dom": "^6.8.2",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "styled-components": "^6.0.0-rc.1"
   },
