--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dayoff-tracker",
+  "name": "workive",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.0.16",
     "@material-ui/core": "^4.12.4",
     "@material-ui/styles": "^4.11.5",
+    "caniuse-lite": "^1.0.30001639",
     "chart.js": "^4.2.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
@@ -40,6 +41,6 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.3",
     "vite": "^4.1.0",
-    "vite-plugin-pwa": "^0.16.4"
+    "typescript": "^5.3.3"
   }
 }
