--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ packages/react-devtools-inline/dist
 packages/react-devtools-shell/dist
 packages/react-devtools-timeline/dist
 inspire
+
+screen shot
+yarn.lock
