--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,16 @@
     "src/**/*"
 , "env.d.ts"  ],
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES6",
     "lib": [
-      "ES2020",
+      "ES6",
       "DOM",
       "DOM.Iterable",
       "WebWorker"
     ],
     "jsx": "react-jsx",
-    "module": "ESNext",
+    "module": "commonjs",
     "useDefineForClassFields": true,
-    "moduleResolution": "bundler",
     "esModuleInterop": true,
     "allowImportingTsExtensions": true,
     "allowSyntheticDefaultImports": true,
@@ -50,5 +49,6 @@
         "./src/services/*"
       ]
     }
-  }
+  },
+  "exclude": ["node_modules"]
 }
