--- a/package.json
+++ b/package.json
@@ -13,34 +13,52 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@hookform/resolvers": "^3.9.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/styles": "^4.11.5",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "caniuse-lite": "^1.0.30001639",
     "chart.js": "^4.2.1",
-    "date-fns": "^2.30.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.7",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.428.0",
     "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-avatar-editor": "^13.0.0",
     "react-chartjs-2": "^5.2.0",
-    "react-day-picker": "^8.8.0",
-    "react-dom": "^18.2.0",
+    "react-day-picker": "8.10.1",
+    "react-dom": "^18.3.1",
     "react-easy-crop": "^4.7.4",
-    "react-hook-form": "^7.43.5",
+    "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.8.2",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
-    "styled-components": "^6.0.0-rc.1"
+    "styled-components": "^6.0.0-rc.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "^22.4.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.1.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^4.1.0"
   }
 }
