--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "include": [
     "src/**/*"
-, "env.d.ts"  ],
+, "env.d.ts"],
   "compilerOptions": {
     "target": "ES6",
     "lib": [
@@ -16,6 +16,8 @@
     "esModuleInterop": true,
     "allowImportingTsExtensions": true,
     "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
     "strict": true,
     "strictNullChecks": false,
     "skipLibCheck": true,
@@ -27,6 +29,7 @@
     "outDir": "dist",
     "declarationMap": true,
     "paths": {
+      "@/*": ["./src/*"],
       "~/components/*": [
         "./src/components/*"
       ],
@@ -50,5 +53,5 @@
       ]
     }
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
 }
