--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@hookform/resolvers": "^3.9.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/styles": "^4.11.5",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -43,7 +41,6 @@
     "react-easy-crop": "^4.7.4",
     "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.8.2",
-    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "styled-components": "^6.0.0-rc.1",
     "tailwind-merge": "^2.5.2",
@@ -60,5 +57,6 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.3.3",
     "vite": "^4.1.0"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
