--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: ghcr.io
           username: ${{github.actor}}
           password: ${{secrets.GHCR_DEPLOY_TOKEN}}
 
