--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:mainline-alpine
 
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY public /var/www/html/address-point
+COPY public /var/www/html/
