--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:mainline-alpine
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY ../dist /var/www/html/
+COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
+COPY dist /var/www/html/
