--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "axios": "^1.7.7",
     "caniuse-lite": "^1.0.30001639",
     "chart.js": "^4.2.1",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.7",
@@ -46,7 +46,7 @@
     "react-router-dom": "^6.8.2",
     "sort-by": "^1.2.0",
     "styled-components": "^6.0.0-rc.1",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
@@ -60,5 +60,6 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.3.3",
     "vite": "^4.1.0"
-  }
+  },
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
